Week5/kubernetes-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations: #AWS-LB-C 설정
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-091b0f283627e6098, subnet-0d616d00a92fdbde8
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: / #a모든 path
            pathType: Prefix
            backend:
              service:
                name: service-test
                port:
                  number: 80
